fixes stacked inline entry collapse toggler alignment

--- a/baton/static/baton/app/src/styles/_changeform.scss
+++ b/baton/static/baton/app/src/styles/_changeform.scss
@@ -38,11 +38,18 @@
   .collapse-entry {
     h3 {
       .entry-collapse-toggler {
+        margin-left: 0 !important;
+        order: 1;
+
         &::before {
           color: $collapse-entry-icon-color;
           content: '\f070';
           cursor: pointer;
           font-family: 'Font Awesome\ 5 Free';
+        }
+
+        & + span {
+          margin-left: auto;
         }
       }
 
